# Huffman

./: CMakeLists.txt  README.md
headers/: encoder.h  huffman.h  reader.h
sources/: encoder.cpp
tests/: .gitignore  testing.cpp
tests/outputs/: Leo_Tolstoy_War_and_Peace_rus.out
utility/: tool.cpp
